--- a/css/color-column.css
+++ b/css/color-column.css
@@ -70,7 +70,7 @@
 }
 
 /*COLORS*/
-.blue{background-color:#1696d2;}
+.blue{background-color:#3CA4BC;}
 .yellow{background-color:#FDBF11;}
 .gray{background-color:#D2D2D2;}
 .magenta{background-color:#EC008B;}
@@ -81,57 +81,57 @@
 
 
 .black{background-color:#000000;}
-.blue-9{background-color:#000000;}
-.blue-8{background-color:#062635;}
-.blue-7{background-color:#0A4C6A;}
-.blue-6{background-color:#12719E;}
-.blue-5{background-color:#1696d2;}
-.blue-4{background-color:#46ABDB;}
-.blue-3{background-color:#73BFE2;}
-.blue-2{background-color:#A2D4EC;}
-.blue-1{background-color:#CFE8F3;}
-.yellow-9{background-color:#000000;}
-.yellow-8{background-color:#843215;}
-.yellow-7{background-color:#ca5800;}
-.yellow-6{background-color:#e88e2d;}
-.yellow-5{background-color:#FDBF11;}
-.yellow-4{background-color:#FCCB41;}
-.yellow-3{background-color:#FDD870;}
-.yellow-2{background-color:#FCE39E;}
-.yellow-1{background-color:#FFF2CF;}
-.gray-9{background-color:#000000;}
-.gray-8{background-color:#353535;}
-.gray-7{background-color:#696969;}
-.gray-6{background-color:#9D9D9D;}
-.gray-5{background-color:#D2D2D2;}
-.gray-4{background-color:#DCDBDB;}
+.blue-9{background-color:#1A3663;}
+.blue-8{background-color:#214E7A;}
+.blue-7{background-color:#2A6890;}
+.blue-6{background-color:#3385A7;}
+.blue-5{background-color:#3CA4BC;}
+.blue-4{background-color:#60B8CC;}
+.blue-3{background-color:#86CBDB;}
+.blue-2{background-color:#ADDDE8;}
+.blue-1{background-color:#D5EEF4;}
+.yellow-9{background-color:#801000;}
+.yellow-8{background-color:#9F2702;}
+.yellow-7{background-color:#BF4405;}
+.yellow-6{background-color:#DF6809;}
+.yellow-5{background-color:#FF900F;}
+.yellow-4{background-color:#FFBC3A;}
+.yellow-3{background-color:#FFDE68;}
+.yellow-2{background-color:#FFF699;}
+.yellow-1{background-color:#FFFFCC;}
+.gray-9{background-color:#2A2A2A;}
+.gray-8{background-color:#545454;}
+.gray-7{background-color:#7D7D7D;}
+.gray-6{background-color:#A7A7A7;}
+.gray-5{background-color:#D1D1D1;}
+.gray-4{background-color:#DADADA;}
 .gray-3{background-color:#E3E3E3;}
-.gray-2{background-color:#ECECEC;}
-.gray-1{background-color:#F5F5F5;}
-.magenta-9{background-color:#000000;}
-.magenta-8{background-color:#351123;}
-.magenta-7{background-color:#761548;}
-.magenta-6{background-color:#AF1F6B;}
-.magenta-5{background-color:#EC008B;}
-.magenta-4{background-color:#E54096;}
-.magenta-3{background-color:#E46AA7;}
-.magenta-2{background-color:#EB99C2;}
-.magenta-1{background-color:#F5CBDF;}
-.green-9{background-color:#000000;}
-.green-8{background-color:#1A2E19;}
-.green-7{background-color:#2C5C2D;}
-.green-6{background-color:#408941;}
-.green-5{background-color:#55B748;}
-.green-4{background-color:#78C26D;}
-.green-3{background-color:#98CF90;}
-.green-2{background-color:#BCDEB4;}
-.green-1{background-color:#DCEDD9;}
+.gray-2{background-color:#EDEDED;}
+.gray-1{background-color:#F6F6F6;}
+.magenta-9{background-color:#7D2C1E;}
+.magenta-8{background-color:#9B2C27;}
+.magenta-7{background-color:#B83139;}
+.magenta-6{background-color:#D43C55;}
+.magenta-5{background-color:#EF4774;}
+.magenta-4{background-color:#F66880;}
+.magenta-3{background-color:#FA8C92;}
+.magenta-2{background-color:#FEB4B0;}
+.magenta-1{background-color:#FFDDD7;}
+.green-9{background-color:#2B631D;}
+.green-8{background-color:#2E7B26;}
+.green-7{background-color:#2F9230;}
+.green-6{background-color:#39A846;}
+.green-5{background-color:#43BE5E;}
+.green-4{background-color:#66CE72;}
+.green-3{background-color:#8BDC8B;}
+.green-2{background-color:#B5E9B0;}
+.green-1{background-color:#DDF5D7;}
 .space-gray-9{background-color:#000000;}
 .space-gray-8{background-color:#0E0C0D;}
 .space-gray-7{background-color:#1A1717;}
 .space-gray-6{background-color:#262223;}
 .space-gray-5{background-color:#332D2F;}
-.space-gray-4{background-color:#5C5859;}
+.space-gray-4{background-color:#7D7D7D;}
 .space-gray-3{background-color:#848081;}
 .space-gray-2{background-color:#ADABAC;}
 .space-gray-1{background-color:#D5D5D4;}
