added new colors!!

--- a/css/color-column.css
+++ b/css/color-column.css
@@ -70,86 +70,58 @@
 }
 
 /*COLORS*/
-.blue{background-color:#3CA4BC;}
-.yellow{background-color:#FDBF11;}
-.gray{background-color:#D2D2D2;}
-.magenta{background-color:#EC008B;}
-.green{background-color:#55B748;}
-.space-gray{background-color:#332D2F;}
-.red{background-color:#DB2B27;}
-.orange{background-color:#e66600;}
+.blue{background-color:#0099B2;}
+.orange{background-color:#E66433;}
+.gray{background-color:#808284;}
+.yellow{background-color:#DCB73C;}
+.green{background-color:#6DA855;}
+.purple{background-color:#8371A0;}
+.space-gray{background-color:#515153;}
 
 
 .black{background-color:#000000;}
 /* https://hihayk.github.io/scale/#4/4/50/80/-25/0/20/14/3CA4BC/60/164/188/white */
-.blue-9{background-color:#1A3663;}
-.blue-8{background-color:#214E7A;}
-.blue-7{background-color:#2A6890;}
-.blue-6{background-color:#3385A7;}
-.blue-5{background-color:#3CA4BC;}
-.blue-4{background-color:#60B8CC;}
-.blue-3{background-color:#86CBDB;}
-.blue-2{background-color:#ADDDE8;}
-.blue-1{background-color:#D5EEF4;}
+.blue-6{background-color:#003B47;}
+.blue-5{background-color:#006879;}
+.blue-4{background-color:#0099B2;}
+.blue-3{background-color:#87C8D8;}
+.blue-2{background-color:#C8E4F0;}
+.blue-1{background-color:#EEF8FD;}
 /* https://hihayk.github.io/scale/#4/4/50/80/25/-17/20/14/FF900F/255/144/15/white */
-.yellow-9{background-color:#801000;}
-.yellow-8{background-color:#9F2702;}
-.yellow-7{background-color:#BF4405;}
-.yellow-6{background-color:#DF6809;}
-.yellow-5{background-color:#FF900F;}
-.yellow-4{background-color:#FFBC3A;}
-.yellow-3{background-color:#FFDE68;}
-.yellow-2{background-color:#FFF699;}
-.yellow-1{background-color:#FFFFCC;}
+.yellow-6{background-color:#53460C;}
+.yellow-5{background-color:#8A7519;}
+.yellow-4{background-color:#DCB73C;}
+.yellow-3{background-color:#EDD8A0;}
+.yellow-2{background-color:#F5E9CC;}
+.yellow-1{background-color:#FBF6EC;}
 /* https://hihayk.github.io/scale/#4/4/80/80/0/0/20/14/d1d1d1/209/209/209/white */
-.gray-9{background-color:#2A2A2A;}
-.gray-8{background-color:#545454;}
-.gray-7{background-color:#7D7D7D;}
-.gray-6{background-color:#A7A7A7;}
-.gray-5{background-color:#D1D1D1;}
-.gray-4{background-color:#DADADA;}
-.gray-3{background-color:#E3E3E3;}
-.gray-2{background-color:#EDEDED;}
-.gray-1{background-color:#F6F6F6;}
+.gray-6{background-color:#323132;}
+.gray-5{background-color:#515153;}
+.gray-4{background-color:#808284;}
+.gray-3{background-color:#BBBDC0;}
+.gray-2{background-color:#DBDCDE;}
+.gray-1{background-color:#F3F3F4;}
 /* https://hihayk.github.io/scale/#4/4/50/80/-25/-25/20/14/EF4774/239/71/116/white */
-.magenta-9{background-color:#7D2C1E;}
-.magenta-8{background-color:#9B2C27;}
-.magenta-7{background-color:#B83139;}
-.magenta-6{background-color:#D43C55;}
-.magenta-5{background-color:#EF4774;}
-.magenta-4{background-color:#F66880;}
-.magenta-3{background-color:#FA8C92;}
-.magenta-2{background-color:#FEB4B0;}
-.magenta-1{background-color:#FFDDD7;}
+.purple-6{background-color:#30263C;}
+.purple-5{background-color:#544768;}
+.purple-4{background-color:#8371A0;}
+.purple-3{background-color:#BDB1CB;}
+.purple-2{background-color:#E0DAED;}
+.purple-1{background-color:#EDEAF5;}
 /* https://hihayk.github.io/scale/#4/4/50/80/25/25/20/14/43BE5E/67/190/94/white */
-.green-9{background-color:#2B631D;}
-.green-8{background-color:#2E7B26;}
-.green-7{background-color:#2F9230;}
-.green-6{background-color:#39A846;}
-.green-5{background-color:#43BE5E;}
-.green-4{background-color:#66CE72;}
-.green-3{background-color:#8BDC8B;}
-.green-2{background-color:#B5E9B0;}
-.green-1{background-color:#DDF5D7;}
-.space-gray-9{background-color:#000000;}
-.space-gray-8{background-color:#0E0C0D;}
-.space-gray-7{background-color:#1A1717;}
-.space-gray-6{background-color:#262223;}
-.space-gray-5{background-color:#332D2F;}
-.space-gray-4{background-color:#7D7D7D;}
-.space-gray-3{background-color:#848081;}
-.space-gray-2{background-color:#ADABAC;}
-.space-gray-1{background-color:#D5D5D4;}
+.green-6{background-color:#20441B;}
+.green-5{background-color:#48733B;}
+.green-4{background-color:#6DA855;}
+.green-3{background-color:#B6D1A5;}
+.green-2{background-color:#D8EBD2;}
+.green-1{background-color:#F2F8EF;}
 /* https://hihayk.github.io/scale/#4/4/50/80/0/0/20/14/FA2434/250/36/52/white */
-.red-9{background-color:#800B14;}
-.red-8{background-color:#9F101B;}
-.red-7{background-color:#BF1522;}
-.red-6{background-color:#DE1C2B;}
-.red-5{background-color:#FA2434;}
-.red-4{background-color:#FF4C59;}
-.red-3{background-color:#FF7580;}
-.red-2{background-color:#FFA1A8;}
-.red-1{background-color:#FFCFD3;}
+.orange-6{background-color:#581900;}
+.orange-5{background-color:#963C15;}
+.orange-4{background-color:#E66433;}
+.orange-3{background-color:#F3AD89;}
+.orange-2{background-color:#FDDAC8;}
+.orange-1{background-color:#FEF3EC;}
 
 
 .print-swatch{
